--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Python Notebooks, Basics, and Data Structures\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: DeeDee Walker\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -33,10 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x + y = 2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "y = 4\n",
+    "z = y/x\n",
+    "print('x + y =', z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +60,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "6\n",
+      "24\n",
+      "120\n",
+      "720\n",
+      "5040\n",
+      "40320\n",
+      "362880\n",
+      "3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 1\n",
+    "counter = 0\n",
+    "while counter != 10:\n",
+    "    for i in range(1,11):\n",
+    "        total = total * i\n",
+    "        print(total)\n",
+    "        counter += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,11 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "testlist = [1,-1,2,-2,3,-3,4,-4]"
+    "testlist = [1,-1,2,-2,3,-3,4,-4]\n",
+    "def mean(values):\n",
+    "    return sum(values)/len(values)\n",
+    "print(mean(testlist))"
    ]
   },
   {
@@ -82,13 +131,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.13973309\n",
+      "0.9257232841\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [ 5.670e-1, -1.480e+0, -5.570e-1, -1.470e+0, 7.340e-1, 1.050e+0, 4.480e-1, 2.570e-1, -1.970e+0, -1.460e+0]\n",
     "list2 = [-1.780e+0, 2.640e-1, 1.160e+0, 9.080e-1, 1.780e+0, 1.080e+0, 1.050e+0, -4.630e-2, 1.520e+0, 5.350e-1]\n",
-    "# the variances of both lists should be relatively close to 1 (off by less than .15)"
+    "# the variances of both lists should be relatively close to 1 (off by less than .15)\n",
+    "\n",
+    "def variance(values):\n",
+    "    varcallist = [item - mean(values) for item in values]\n",
+    "    variance = sum(list(map(lambda x:x **2, varcallist)))/len(values)\n",
+    "    print(variance)\n",
+    "\n",
+    "variance(list1)\n",
+    "variance(list2)"
    ]
   },
   {
@@ -105,10 +171,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['s', 't', 'a', 'r', 't']\n",
+      "['@', 'l', 'a', 's', 't']\n",
+      "['t', 's', 'a', 'l', '@', 1, 4, 5, 12, 9, 't', 'r', 'a', 't', 's']\n",
+      "['t', 'r', 9, 5, 1, 'l', 's']\n",
+      "['a', 9, 4, 'l', 't']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ddw_list = ['s','t','a','r','t',9,12,5,4,1,'@','l','a','s','t']\n",
+    "print(ddw_list[:5])\n",
+    "print(ddw_list[10::])\n",
+    "print(ddw_list[::-1])\n",
+    "print(ddw_list[1::2])\n",
+    "print(ddw_list[2::3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Web Mining & Applied NLP', 'course': '44620', 'term': '2022 Fall OP2', 'credits': 3, 'objectives': ['Manage Python libraries and packages', 'Interact with hosted Version Control Systems', 'Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form', 'Describe the steps in a basic Natural Language Processing (NLP) Pipeline', 'Use preexisting tools and software libraries to perform some NLP, such as sentiment analysis', 'Explain results and conclusions drawn from visualized information']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dd_dict = {'name':'Web Mining & Applied NLP', 'course':'44620', 'term':'2022 Fall OP2', 'credits':3, 'objectives':['Manage Python libraries and packages','Interact with hosted Version Control Systems','Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form','Describe the steps in a basic Natural Language Processing (NLP) Pipeline','Use preexisting tools and software libraries to perform some NLP, such as sentiment analysis','Explain results and conclusions drawn from visualized information']}\n",
+    "print(dd_dict)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,9 +236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead']\n"
+     ]
+    }
+   ],
    "source": [
     "player_character = {'name': 'Kitab',\n",
     "                   'class': [('Cleric: Knowledge', 7)],\n",
@@ -151,7 +255,8 @@
     "                             'level 2': ['Augury', 'Calm Emotions', 'Command', 'Invisibility', 'Lesser Restoration'],\n",
     "                             'level 3': ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead'],\n",
     "                             'level 4': ['Banishment', 'Confusion']}\n",
-    "                   }"
+    "                   }\n",
+    "print(player_character['spells']['level 3'])"
    ]
   },
   {
@@ -163,11 +268,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique values:  12\n"
+     ]
+    }
+   ],
    "source": [
-    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]"
+    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]\n",
+    "dd_set = set(values)\n",
+    "print(\"Unique values: \", len(dd_set))"
    ]
   },
   {
@@ -188,7 +303,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
