--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -60,23 +60,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "6\n",
-      "24\n",
-      "120\n",
-      "720\n",
-      "5040\n",
-      "40320\n",
-      "362880\n",
-      "3628800\n"
+      "The factorial of  1 is =  1\n",
+      "The factorial of  2 is =  2\n",
+      "The factorial of  3 is =  6\n",
+      "The factorial of  4 is =  24\n",
+      "The factorial of  5 is =  120\n",
+      "The factorial of  6 is =  720\n",
+      "The factorial of  7 is =  5040\n",
+      "The factorial of  8 is =  40320\n",
+      "The factorial of  9 is =  362880\n",
+      "The factorial of  10 is =  3628800\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
     "while counter != 10:\n",
     "    for i in range(1,11):\n",
     "        total = total * i\n",
-    "        print(total)\n",
+    "        print(\"The factorial of \", counter+1,\"is = \",total)\n",
     "        counter += 1"
    ]
   },
